# checkmate_bot

./: .gitignore  Cargo.toml  README.md  config_example.toml
src/: bot.rs  consts.rs  event.rs  lib.rs  main.rs  map.rs  socket.rs
