[package]
name = "checkmate_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_socketio = "0.4"
serde_json = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
fastrand = "1.8"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1.7"
indexmap = "1.9"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
